update field openclass and logic